# Kaldi-TPU

./: .gitignore  CMakeLists.txt  README.md  alsa_demo  build-riscv64-linux-gnu.sh  data.ipynb
cmake/: onnxruntime-linux-riscv64-static.cmake  onnxruntime-linux-riscv64.cmake  onnxruntime.cmake
sherpa-onnx/csrc/: CMakeLists.txt  CMakeLists1.txt  cat.cc  cat.h  cvi-utils.cc  cvi-utils.h  cviruntime.h  cvitpu_debug.h  data-utils.cc  data-utils.h  hypothesis.h  log.cc  log.h  online-ctc-decoder.h  online-ctc-model.cc  online-ctc-model.h  online-model-config.cc  online-model-config.h  online-recognizer-ctc-impl.h  online-recognizer-impl.cc  online-recognizer-impl.h  online-recognizer-transducer-impl.h  online-recognizer.cc  online-recognizer.h  online-stream.cc  online-stream.h  online-transducer-decoder.cc  online-transducer-decoder.h  online-transducer-greedy-search-decoder.cc  online-transducer-model.cc  online-transducer-model.h  online-zipformer-transducer-model.cc  online-zipformer-transducer-model.h  online-zipformer2-ctc-model-config.cc  online-zipformer2-ctc-model-config.h  online-zipformer2-ctc-model.cc  online-zipformer2-ctc-model.h  online-zipformer2-transducer-model.cc  online-zipformer2-transducer-model.h  onnx-to-bm.cc  (+14 more)
test_bmruntime/: CMakeLists.txt  test_3in1bmodel.cc  test_single_bmodel.cc
zipformer-bmodels/: en_out.npz  en_out.npz.npy  join_out.npy  net_out.npy  run_test_npz.py  sophon_arm-3.7.0-py3-none-any.whl
zipformer-bmodels/temp-gt/: 0_(8, 512)_gt.npy  11_(2, 384, 30)_gt.npy  13_(3, 384, 30)_gt.npy  15_(4, 384, 30)_gt.npy  16_(2, 64, 192)_gt.npy  17_(4, 32, 192)_gt.npy  18_(3, 16, 192)_gt.npy  19_(2, 8, 192)_gt.npy  1_(2, 384)_gt.npy  21_(2,)_gt.npy  22_(4,)_gt.npy  23_(3,)_gt.npy  24_(2,)_gt.npy  25_(4,)_gt.npy  26_(2, 64, 96)_gt.npy  27_(4, 32, 96)_gt.npy  28_(3, 16, 96)_gt.npy  29_(2, 8, 96)_gt.npy  2_(4, 384)_gt.npy  30_(4, 32, 96)_gt.npy  31_(2, 64, 96)_gt.npy  32_(4, 32, 96)_gt.npy  33_(3, 16, 96)_gt.npy  34_(2, 8, 96)_gt.npy  3_(3, 384)_gt.npy  4_(2, 384)_gt.npy  5_(4, 384)_gt.npy  7_(4, 384, 30)_gt.npy  8_(3, 384, 30)_gt.npy  9_(2, 384, 30)_gt.npy
zipformer-bmodels/temp-pred/: 0_(8, 512).npy  10_(4, 384).npy  11_(2, 64, 192).npy  12_(4, 32, 192).npy  13_(3, 16, 192).npy  14_(2, 8, 192).npy  15_(4, 32, 192).npy  16_(2, 64, 96).npy  17_(4, 32, 96).npy  18_(3, 16, 96).npy  19_(2, 8, 96).npy  1_(2,).npy  20_(4, 32, 96).npy  21_(2, 64, 96).npy  22_(4, 32, 96).npy  23_(3, 16, 96).npy  24_(2, 8, 96).npy  25_(4, 32, 96).npy  26_(2, 384, 30).npy  27_(4, 384, 30).npy  28_(3, 384, 30).npy  29_(2, 384, 30).npy  2_(4,).npy  30_(4, 384, 30).npy  31_(2, 384, 30).npy  32_(4, 384, 30).npy  33_(3, 384, 30).npy  34_(2, 384, 30).npy  35_(4, 384, 30).npy  3_(3,).npy  4_(2,).npy  5_(4,).npy  6_(2, 384).npy  7_(4, 384).npy  8_(3, 384).npy  9_(2, 384).npy
zipformer-bmodels/test_npz/: de_test.npz  decoder_cvimodel_input.npz  en_test.npz  encoder.npz  jo_test.npz  joiner.npz
zipformer2/: a.py  convert_onnx.py  gen_input.py  zipformer2_encoder.txt
